--- a/frontend/package.json
+++ b/frontend/package.json
@@ -19,7 +19,8 @@
     "lucide-react": "^0.363.0",
     "framer-motion": "^11.0.0",
     "jwt-decode": "^4.0.0",
-    "stripe": "^14.0.0"
+    "stripe": "^14.0.0",
+    "recharts": "^2.8.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.0",
@@ -28,7 +29,7 @@
     "@typescript-eslint/parser": "^6.0.0",
     "@vitejs/plugin-react": "^4.0.0",
     "autoprefixer": "^10.4.16",
-    "eslint": "^8.45.0",
+    "eslint": "^8.57.1",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.0",
     "postcss": "^8.4.32",
