--- a/frontend/package.json
+++ b/frontend/package.json
@@ -19,8 +19,7 @@
     "lucide-react": "^0.363.0",
     "framer-motion": "^11.0.0",
     "jwt-decode": "^4.0.0",
-    "stripe": "^14.0.0",
-    "recharts": "^2.8.0"
+    "stripe": "^14.0.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.0",
