--- a/netlify.toml
+++ b/netlify.toml
@@ -1,10 +1,10 @@
 [build]
   base = "frontend"
-  command = "npm run build"
+  command = "CI= npm run build"
   publish = "dist"
 
 [build.environment]
-  NODE_VERSION = "20"
+  NODE_VERSION = "18"
 
 # Critical for SPA routing: all requests go to index.html
 [[redirects]]
